# mini-iac

./: .gitignore  README.md  pyproject.toml
examples/: health-check-fail.yaml  health-check-slow.yaml  health-check-success.yaml  multi-service.yaml  partial-failure.yaml  single-container.yaml  with-dependencies.yaml  with-vars.yaml
src/mini_iac/: cli.py  exceptions.py
src/mini_iac/commands/: apply.py  destroy.py  plan.py  refresh.py  rollback.py
src/mini_iac/docker_engine/: client.py  containers.py  health.py  networks.py  volumes.py
src/mini_iac/executor/: runner.py
src/mini_iac/parser/: loader.py  schema.py
src/mini_iac/planner/: diff.py  graph.py  refresh.py
src/mini_iac/state/: history.py  models.py  store.py
tests/integration/: test_apply_destroy_live.py
tests/unit/: test_destroy.py  test_docker_containers.py  test_docker_networks_volumes.py  test_executor.py  test_graph.py  test_health.py  test_parser.py  test_planner_diff.py  test_refresh_command.py  test_state_history.py  test_state_store.py
